# TensorForge

./: .gitignore  CMakeLists.txt
aten/: CMakeLists.txt
aten/Aten/: CMakeLists.txt
aten/Aten/core/: _storage.hpp  _storage_impl.hpp  _tensor.hpp  _tensor_impl.hpp  _tensor_ops.hpp
aten/Aten/core/src/: _memory_layout.cpp
aten/Aten/include/: tensor.hpp
aten/Aten/include/impl/: storage.hpp  tensor_impl.hpp
aten/Aten/native/core/cpu/: config.hpp  config.tpp  cpu_kernels.hpp
aten/Aten/native/core/xpu/: xpu_kernels.hpp
aten/Aten/native/cpu/: CMakeLists.txt
aten/Aten/native/cpu/core/: config.hpp  config.tpp  cpu_kernels.hpp
aten/Aten/native/cpu/src/: cpu_kernel.cpp
aten/Aten/native/src/cpu/: cpu_kernel.cpp
aten/Aten/native/src/xpu/: xpu_kernel.cpp
aten/Aten/native/xpu/: CMakeLists.txt
aten/Aten/native/xpu/core/: xpu_kernels.hpp
aten/Aten/native/xpu/src/: xpu_kernel.cpp
aten/Aten/src/: _memory_layout.cpp  _view_ops.cpp
aten/aten_include/: CMakeLists.txt
aten/aten_include/dispatcher/: at_dispatcher_kernel.hpp  dispatcher.hpp  register_kernel.hpp
aten/aten_include/kernel/: kernel.hpp
aten/dispatcher/: CMakeLists.txt  _dispatcher.hpp  _map.hpp  _register_kernel.hpp  _table.hpp  map.cpp  register.cpp
aten/include/impl/: storage_impl.hpp
cmake/: FindLevelZero.cmake  FindSYCL.cmake
cpp20/: CMakeLists.txt
cpp20/core/: CMakeLists.txt  _Device.hpp  _Dtype.hpp  _allocator.hpp
cpp20/cpp20_include/: Allocator.hpp  CMakeLists.txt  Dtype.hpp  backend.hpp  utils.hpp
cpp20/device/: CMakeLists.txt
cpp20/device/cpu/: CMakeLists.txt
cpp20/device/cpu/core/: _windows_alloc_delete.hpp  cpu_alloc.hpp  cpu_caching.hpp
cpp20/device/cpu/core/src/: cpu_caching.cpp
cpp20/device/cpu/cpu_include/: CMakeLists.txt  cpu.hpp
cpp20/device/cpu/src/: _windows_services.cpp  cpu_alloc.cpp  cpu_caching.cpp
cpp20/device/include/: CMakeLists.txt  _cpu.hpp  _xpu.hpp
cpp20/device/xpu/: CMakeLists.txt
cpp20/device/xpu/core/: based_queues.hpp  get_free_vram.hpp  xpu_alloc.hpp  xpu_caching.hpp
cpp20/device/xpu/core/src/: get_free_vram.cpp  xpu_caching.cpp
cpp20/device/xpu/src/: get_free_vram.cpp  xpu_alloc.cpp  xpu_caching.cpp
cpp20/device/xpu/xpu_include/: CMakeLists.txt  xpu.hpp
cpp20/include/: Allocator.hpp  CMakeLists.txt  Device.hpp  Dtype.hpp  intrusive_ptr.hpp
cpp20/intrusive_ptr/: CMakeLists.txt  _intrusive_ptr.hpp  _intrusive_refcounted.hpp  _make_intrusive.hpp  intrusive_ptr.hpp  intrusive_refcounted.hpp  make_intrusive.hpp
cpp20/intrusive_ptr/include/: _intrusive_ptr.hpp
cpp20/src/: CMakeLists.txt  choose_allocator.cpp
cpp20/utils/: CMakeLists.txt
cpp20/utils/core/: compute_numel.hpp  compute_offset.hpp  compute_strides.hpp  is_perm.hpp
cpp20/utils/core/src/: compute_numel.cpp  is_perm.cpp
cpp20/utils/include/: util.hpp
cpp20/utils/src/: compute_offset.cpp  compute_strides.cpp
forge/tools/codegen/: generate_cpu_kn.py  generate_device.py  generate_dtype.py  generate_map.py  generate_op.py  generate_table.py  generate_xpu_kn.py  generate_yaml.py  load_yaml.py  read_cpp.py  script.py
forge/tools/codegen/register/: generate_cpu_kn.hpp.jinja  generate_device.hpp.jinja  generate_dtype.hpp.jinja  generate_map.hpp.jinja  generate_xpu_kn.hpp.jinja  register.cpp  register.hpp.jinja  table.hpp.jinja
forge/tools/codegen/yaml/: backends.yaml  dtypes.yaml  operators.yaml  utils.yaml
lib/: aten.lib  cpp20.lib  cpu.lib  cpu_kernel.lib  xpu.lib  xpu_kernel.lib
test/: CMakeLists.txt
test/test_alloc/: CMakeLists.txt  test_cpu_alloc.cpp  test_xpu_alloc.cpp
